force-app/main/default/objects/PON_Enrollments__c/PON_Enrollments__c.object-meta.xml
<CustomObject>
    <label>PON Enrollment</label>
    <nameField>
        <displayFormat>A-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>PON Enrollments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PON Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>