force-app/main/default/objects/PON_Enrollments__c/fields/Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium__c</fullName>
    <description>PON Enrollment Annual Premium</description>
    <inlineHelpText>Do not include the dollar symbol ($) - only the amount of the annual premium (e.g. 123.45)</inlineHelpText>
    <label>Annual Premium</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>