force-app/main/default/objects/PON_Enrollments__c/fields/COD__c.field-meta.xml
<CustomField>
    <fullName>COD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allows you to distinguish COD PON Enrollments.</description>
    <inlineHelpText>Check this box for COD PON Enrollments.</inlineHelpText>
    <label>COD</label>
    <type>Checkbox</type>
</CustomField>