force-app/main/default/objects/PON_Enrollments__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>PON Contract Number</description>
    <externalId>true</externalId>
    <label>Contract Number</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>