force-app/main/default/objects/PON_Enrollments__c/fields/CX_Date__c.field-meta.xml
<CustomField>
    <fullName>CX_Date__c</fullName>
    <inlineHelpText>Format: MM/DD/YYYY</inlineHelpText>
    <label>CX Date</label>
    <type>Date</type>
</CustomField>