force-app/main/default/objects/PON_Enrollments__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>PON Enrollment Effective Date</description>
    <inlineHelpText>Format: MM/DD/YYYY</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>