force-app/main/default/objects/PON_Enrollments__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <description>PON Enrollment Date</description>
    <inlineHelpText>Format: MM/DD/YYYY</inlineHelpText>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>