force-app/main/default/objects/PON_Enrollments__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <label>Property City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>