force-app/main/default/objects/PON_Enrollments__c/fields/Property_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_State_Code__c</fullName>
    <description>Property State Code</description>
    <inlineHelpText>Two-Digit State Code (e.g. FL)</inlineHelpText>
    <label>Property State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>