force-app/main/default/objects/PON_Enrollments__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <description>Property Zip Code</description>
    <inlineHelpText>Property Zip Code - 5 Digits</inlineHelpText>
    <label>Property Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>