force-app/main/default/objects/PON_Enrollments__c/fields/Service_Provider_Service_Bench_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Service_Bench_ID__c</fullName>
    <description>PON Service Provider Service Bench ID</description>
    <inlineHelpText>PON Service Provider Service Bench ID</inlineHelpText>
    <label>Service Provider Service Bench ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>