force-app/main/default/objects/PON_Enrollments__c/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <description>PON Service Provider Technician Name</description>
    <inlineHelpText>First and Last Name of the SP Technician</inlineHelpText>
    <label>Technician Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>