force-app/main/default/objects/PON_Enrollments__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Account Name this enrollment was sold under.</description>
    <inlineHelpText>Service Provider (Account) Name this enrollment was sold under</inlineHelpText>
    <label>Vendor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PON Enrollments</relationshipLabel>
    <relationshipName>PON_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>