force-app/main/default/objects/PON_Enrollments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor_Name__c</columns>
    <columns>Annual_Premium__c</columns>
    <columns>CX_Date__c</columns>
    <columns>Enrollment_Date__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Contract_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>